# quantum-automl

./: LICENSE  README.md  pyproject.toml  test.py
examples/: quickstart.ipynb
src/quantum_automl/: __init__.py  automl.py  cluster.py  data.py  explainability.py  models.py  search.py  utils.py
test/: pat.py  patient.py  patients.csv
